# MarketSharkHeadless

./: .env  .gitignore  CMakeLists.txt  README.md  build.sh  env.h.in
.github/workflows/: build.yml
TestPaper/: eula.txt  paper.yml  server.properties  usercache.json
TestPaper/plugins/PluginMetrics/: config.yml
TestPaper/world/: level.dat_old
TestPaper/world/region/: r.-1.0.mca
TestPaper/world/stats/: bb19ef2f-2f95-39a8-8bad-bda3ed373847.json
TestPaper/world_nether/: level.dat_old
TestPaper/world_nether/DIM-1/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
TestPaper/world_the_end/: level.dat_old
TestPaper/world_the_end/DIM1/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
cli/: main.cpp
client/: FlipItem.cpp  FlipItem.h  Logger.cpp  Objects.cpp  Objects.h  Server.cpp  Server.h  main.cpp
client/auth/: Auth.cpp  Auth.h
client/cofl/: CoflNet.cpp  CoflNet.h  CoflSessionManager.cpp  CoflSessionManager.h  Command.h  CommandType.h  JsonStringCommand.h  RawCommand.h
client/cofl/models/: AuctionData.h  ChatMessageData.h  FlipData.h  ModListData.h  ProxyRequest.h  SoundData.h  TimerData.h
client/features/: AutoBuy.cpp  AutoBuy.h  AutoOpen.cpp  AutoOpen.h  ChatLogger.cpp  ChatLogger.h  Failsafes.cpp  Failsafes.h  JoinSkyblock.cpp  JoinSkyblock.h  QueueManager.cpp  QueueManager.h  Stats.cpp  Stats.h
client/util/: ColorConfig.cpp  ColorConfig.h  Colors.cpp  Colors.h  FlipItem.cpp  FlipItem.h  Logger.cpp  Logger.h  Objects.cpp  Objects.h
lib/OpenSSL/include/openssl/: opensslconf.h
lib/OpenSSL/lib/: ssleay32.lib  ssleay32d.lib
lib/libcurl/: LICENSE
lib/libcurl/lib/: libcurl-msvc-2017.lib  libcurld-msvc-2017.lib
lib/zlib/: LICENSE
lib/zlib/include/: zconf.h
lib/zlib/lib/: zlib.lib  zlibd.lib  zlibstatic.lib  zlibstaticd.lib
mclib/include/mclib/common/: DataBuffer.h
mclib/include/mclib/common/internal/: json.hpp
mclib/include/mclib/core/: Client.h  Connection.h
mclib/include/mclib/entity/: Metadata.h
mclib/include/mclib/inventory/: Slot.h
mclib/include/mclib/nbt/: NBT.h  Tag.h
mclib/include/mclib/protocol/: ProtocolState.h
mclib/include/mclib/protocol/packets/: Packet.h
mclib/include/mclib/util/: Utility.h  VersionFetcher.h  Yggdrasil.h
mclib/src/mclib/common/: DataBuffer.cpp
mclib/src/mclib/core/: Client.cpp  Connection.cpp  PlayerManager.cpp
mclib/src/mclib/entity/: EntityManager.cpp  Metadata.cpp
mclib/src/mclib/inventory/: Slot.cpp
mclib/src/mclib/nbt/: Tag.cpp
mclib/src/mclib/protocol/: Protocol.cpp
mclib/src/mclib/protocol/packets/: Packet.cpp  PacketDispatcher.cpp  PacketFactory.cpp
mclib/src/mclib/util/: Forge.cpp  Hash.cpp  Utility.cpp  VersionFetcher.cpp  Yggdrasil.cpp
run/: Normelt  color_log.txt  config.json  log.txt
service/: main.cpp
tests/: catch.hpp
